--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.anna.zip=H:\\DOCUMENT SCHOOL\\FILE HADI FIRMANSYAH\\KELAS 11\\PBO\\TUGAS\\UJI LEVEL\\UJI_LEVEL_3\\db\\anna.zip
+file.reference.barcode.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\barcode.jar
 file.reference.commons-beanutils-1.8.2-sources.jar=ALL JASPER\\commons-beanutils-1.8.2-sources.jar
 file.reference.commons-collections-3.2.1.jar=ALL JASPER\\commons-collections-3.2.1.jar
 file.reference.commons-digester-1.7.jar=ALL JASPER\\commons-digester-1.7.jar
@@ -53,8 +54,11 @@ file.reference.jfreechart-1.0.13.jar=ALL JASPER\\jfreechart-1.0.13.jar
 file.reference.JTattoo-1.6.11.jar=ALL JASPER\\JTattoo-1.6.11.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=db\\File-Pendukung-Java\\File Pendukung\\mysql-connector-java-5.1.18-bin.jar
 file.reference.poi-ooxml-3.9.jar=ALL JASPER\\poi-ooxml-3.9.jar
+file.reference.qrgen-1.0.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\qrgen-1.0.jar
 file.reference.rs2xml.jar=ALL JASPER\\rs2xml.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\edwar\\Downloads\\swing-notification-main\\swing-notification-main\\TimingFramework-0.55.jar
+file.reference.zxing-core-1.7.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\zxing-j2se-1.7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -98,7 +102,11 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
     ${reference.SistemKasir.jar}:\
-    ${file.reference.TimingFramework-0.55.jar}
+    ${file.reference.TimingFramework-0.55.jar}:\
+    ${file.reference.barcode.jar}:\
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
