--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-beanutils-1.8.2-sources.jar=ALL JASPER\\commons-beanutils
 file.reference.commons-collections-3.2.1.jar=ALL JASPER\\commons-collections-3.2.1.jar
 file.reference.commons-digester-1.7.jar=ALL JASPER\\commons-digester-1.7.jar
 file.reference.commons-logging-1.1.1.jar=ALL JASPER\\commons-logging-1.1.1.jar
+file.reference.datechooser.jar=C:\\Users\\edwar\\Downloads\\date-chooser-main\\date-chooser-main\\dist\\datechooser.jar
 file.reference.File-Pendukung-Java.zip=db\\File-Pendukung-Java.zip
 file.reference.groovy-all-2.0.1.jar=ALL JASPER\\groovy-all-2.0.1.jar
 file.reference.jasper-compiler-jdt-5.5.23.jar=ALL JASPER\\jasper-compiler-jdt-5.5.23.jar
@@ -49,9 +50,11 @@ file.reference.jasperreports-javaflow-6.5.0.jar=ALL JASPER\\jasperreports-javafl
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\edwar\\Downloads\\kasir-gudang-app-master (1)\\kasir-gudang-app-master\\dist\\lib\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=../jcalendar-1.4/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=db\\File-Pendukung-Java\\File Pendukung\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\edwar\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.17.jar=ALL JASPER\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.13.jar=ALL JASPER\\jfreechart-1.0.13.jar
 file.reference.JTattoo-1.6.11.jar=ALL JASPER\\JTattoo-1.6.11.jar
+file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\edwar\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=db\\File-Pendukung-Java\\File Pendukung\\mysql-connector-java-5.1.18-bin.jar
 file.reference.poi-ooxml-3.9.jar=ALL JASPER\\poi-ooxml-3.9.jar
 file.reference.qrgen-1.0.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\qrgen-1.0.jar
@@ -106,7 +109,10 @@ javac.classpath=\
     ${file.reference.barcode.jar}:\
     ${file.reference.qrgen-1.0.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.zxing-j2se-1.7.jar}
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.datechooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.mysql-connector-j-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
