--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.commons-collections-3.2.1.jar=ALL JASPER\\commons-collections-3.2
 file.reference.commons-digester-1.7.jar=ALL JASPER\\commons-digester-1.7.jar
 file.reference.commons-logging-1.1.1.jar=ALL JASPER\\commons-logging-1.1.1.jar
 file.reference.datechooser.jar=C:\\Users\\edwar\\Downloads\\date-chooser-main\\date-chooser-main\\dist\\datechooser.jar
+file.reference.datechooser.jar-1=C:\\Users\\edwar\\Downloads\\aplikasi s2 refrensi\\date-chooser-main\\date-chooser-main\\dist\\datechooser.jar
 file.reference.File-Pendukung-Java.zip=db\\File-Pendukung-Java.zip
 file.reference.groovy-all-2.0.1.jar=ALL JASPER\\groovy-all-2.0.1.jar
 file.reference.jasper-compiler-jdt-5.5.23.jar=ALL JASPER\\jasper-compiler-jdt-5.5.23.jar
@@ -51,15 +52,18 @@ file.reference.jcalendar-1.3.3.jar=C:\\Users\\edwar\\Downloads\\kasir-gudang-app
 file.reference.jcalendar-1.4.jar=../jcalendar-1.4/lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=db\\File-Pendukung-Java\\File Pendukung\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\edwar\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\edwar\\Downloads\\aplikasi s2 refrensi\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.17.jar=ALL JASPER\\jcommon-1.0.17.jar
 file.reference.jfreechart-1.0.13.jar=ALL JASPER\\jfreechart-1.0.13.jar
 file.reference.JTattoo-1.6.11.jar=ALL JASPER\\JTattoo-1.6.11.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\edwar\\Downloads\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=db\\File-Pendukung-Java\\File Pendukung\\mysql-connector-java-5.1.18-bin.jar
+file.reference.notification.jar=C:\\Users\\edwar\\Downloads\\aplikasi s2 refrensi\\swing-notification-main\\swing-notification-main\\dist\\notification.jar
 file.reference.poi-ooxml-3.9.jar=ALL JASPER\\poi-ooxml-3.9.jar
 file.reference.qrgen-1.0.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\qrgen-1.0.jar
 file.reference.rs2xml.jar=ALL JASPER\\rs2xml.jar
 file.reference.TimingFramework-0.55.jar=C:\\Users\\edwar\\Downloads\\swing-notification-main\\swing-notification-main\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-1=C:\\Users\\edwar\\Downloads\\aplikasi s2 refrensi\\swing-notification-main\\swing-notification-main\\TimingFramework-0.55.jar
 file.reference.zxing-core-1.7.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\zxing-core-1.7.jar
 file.reference.zxing-j2se-1.7.jar=C:\\Users\\edwar\\Downloads\\barcode\\barcode\\src\\barcode\\liblary\\zxing-j2se-1.7.jar
 includes=**
@@ -112,7 +116,11 @@ javac.classpath=\
     ${file.reference.zxing-j2se-1.7.jar}:\
     ${file.reference.datechooser.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.TimingFramework-0.55.jar-1}:\
+    ${file.reference.notification.jar}:\
+    ${file.reference.datechooser.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
